packages/git2_bridge/lib/src/git2_bridge_bindings_generated.dart

// Generated by `dart run ffigen --config ffigen.yaml`. Do not edit by hand.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for git_bridge.h — the flat C wrapper
/// around libgit2 (see ../../native/README.md). Do not hand-edit; run
/// `dart run ffigen --config ffigen.yaml` instead.
///
class Git2BridgeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Git2BridgeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Git2BridgeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Clones `url` into `path`. `token` is a GitHub OAuth access token used
  /// as the HTTPS password (username is fixed to "oauth2"); pass NULL for
  /// unauthenticated clones of public repos. `shallow` performs a
  /// depth=1 clone when non-zero.
  int gb_clone(
    ffi.Pointer<ffi.Char> url,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> token,
    int shallow,
    gb_progress_cb on_progress,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _gb_clone(
      url,
      path,
      token,
      shallow,
      on_progress,
      user_data,
    );
  }

  late final _gb_clonePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            gb_progress_cb,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('gb_clone');
  late final _gb_clone = _gb_clonePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          gb_progress_cb,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Fetches `origin` and fast-forwards the current branch. Fails with
  /// GB_ERROR_NONFASTFORWARD if the branches have diverged (MVP does not
  /// support merge/rebase) and GB_ERROR_UNCOMMITTED if the working tree
  /// has local changes that would be overwritten.
  int gb_pull(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> token,
    gb_progress_cb on_progress,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _gb_pull(
      path,
      token,
      on_progress,
      user_data,
    );
  }

  late final _gb_pullPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            gb_progress_cb,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('gb_pull');
  late final _gb_pull = _gb_pullPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          gb_progress_cb,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Pushes the current branch to its configured upstream. Fails with
  /// GB_ERROR_NO_UPSTREAM if the branch has no upstream configured.
  int gb_push(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> token,
    gb_progress_cb on_progress,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _gb_push(
      path,
      token,
      on_progress,
      user_data,
    );
  }

  late final _gb_pushPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            gb_progress_cb,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('gb_push');
  late final _gb_push = _gb_pushPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          gb_progress_cb,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Initializes a new, non-bare repository at `path` (which must already
  /// exist and may contain files — e.g. content just extracted from a
  /// zip) with an initial branch named `main` and no commits (unborn
  /// HEAD). Used for importing a plain (non-git) folder/zip as a new
  /// local repository. Returns GB_ERROR_EXISTS if `path` is already a
  /// git repository.
  int gb_init(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _gb_init(
      path,
    );
  }

  late final _gb_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'gb_init',
      );
  late final _gb_init = _gb_initPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Adds `file_path` (relative to repo root) to the index.
  int gb_stage(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Char> file_path,
  ) {
    return _gb_stage(
      repo_path,
      file_path,
    );
  }

  late final _gb_stagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('gb_stage');
  late final _gb_stage = _gb_stagePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Removes `file_path` from the index, restoring the HEAD version of
  /// the entry (does not touch the working tree).
  int gb_unstage(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Char> file_path,
  ) {
    return _gb_unstage(
      repo_path,
      file_path,
    );
  }

  late final _gb_unstagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('gb_unstage');
  late final _gb_unstage = _gb_unstagePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Creates a commit from the current index on top of HEAD (or as the
  /// first commit if the repo is empty).
  int gb_commit(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> author_name,
    ffi.Pointer<ffi.Char> author_email,
  ) {
    return _gb_commit(
      repo_path,
      message,
      author_name,
      author_email,
    );
  }

  late final _gb_commitPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('gb_commit');
  late final _gb_commit = _gb_commitPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Writes a JSON array describing the working tree / index status to
  /// *json_output, e.g.:
  /// [{"path":"src/main.dart","status":"modified","staged":false}, ...]
  /// Caller must free *json_output via gb_free_string.
  int gb_get_status(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json_output,
  ) {
    return _gb_get_status(
      repo_path,
      json_output,
    );
  }

  late final _gb_get_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('gb_get_status');
  late final _gb_get_status = _gb_get_statusPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)
      >();

  /// Writes a JSON array describing the entries of `rel_path` (relative
  /// to repo root; "" for repo root) as tracked in HEAD's tree, e.g.:
  /// [{"name":"lib","path":"lib","type":"tree"},
  /// {"name":"pubspec.yaml","path":"pubspec.yaml","type":"blob","size":512}]
  /// Caller must free *json_output via gb_free_string.
  int gb_get_file_tree(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Char> rel_path,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json_output,
  ) {
    return _gb_get_file_tree(
      repo_path,
      rel_path,
      json_output,
    );
  }

  late final _gb_get_file_treePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('gb_get_file_tree');
  late final _gb_get_file_tree = _gb_get_file_treePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  /// Returns 1 if `path` is a git repository (has a .git directory), 0
  /// otherwise. Does not allocate.
  int gb_is_repository(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _gb_is_repository(
      path,
    );
  }

  late final _gb_is_repositoryPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'gb_is_repository',
      );
  late final _gb_is_repository = _gb_is_repositoryPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Writes the short SHA + summary of HEAD to *json_output, e.g.:
  /// {"sha":"a1b2c3d","summary":"Fix crash on empty repo","branch":"main"}
  /// Caller must free *json_output via gb_free_string. Returns
  /// GB_ERROR_UNBORN_HEAD if the repo exists but has no commits yet, and
  /// GB_ERROR_NOTFOUND if `repo_path` isn't a git repository at all.
  int gb_get_head_info(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json_output,
  ) {
    return _gb_get_head_info(
      repo_path,
      json_output,
    );
  }

  late final _gb_get_head_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('gb_get_head_info');
  late final _gb_get_head_info = _gb_get_head_infoPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)
      >();

  /// Returns the number of commits on the current branch that are not
  /// yet present on its upstream (0 if there is no upstream, or the repo
  /// is up to date). Used to populate the "unpushed_commits" badge.
  int gb_get_unpushed_count(
    ffi.Pointer<ffi.Char> repo_path,
    ffi.Pointer<ffi.Int> out_count,
  ) {
    return _gb_get_unpushed_count(
      repo_path,
      out_count,
    );
  }

  late final _gb_get_unpushed_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)
        >
      >('gb_get_unpushed_count');
  late final _gb_get_unpushed_count = _gb_get_unpushed_countPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>();

  /// Returns a static, human-readable string for the most recent libgit2
  /// error on this thread (mirrors git_error_last()). Never NULL. Do NOT
  /// free the returned pointer.
  ffi.Pointer<ffi.Char> gb_last_error_message() {
    return _gb_last_error_message();
  }

  late final _gb_last_error_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'gb_last_error_message',
      );
  late final _gb_last_error_message = _gb_last_error_messagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// One-time global libgit2 init. Safe to call multiple times (ref
  /// counted internally by libgit2). Call once per Isolate before any
  /// other gb_* function.
  int gb_global_init() {
    return _gb_global_init();
  }

  late final _gb_global_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('gb_global_init');
  late final _gb_global_init = _gb_global_initPtr.asFunction<int Function()>();

  /// Mirrors git_libgit2_shutdown(). Call when an Isolate is done issuing
  /// git operations, if it will not issue any more.
  int gb_global_shutdown() {
    return _gb_global_shutdown();
  }

  late final _gb_global_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('gb_global_shutdown');
  late final _gb_global_shutdown = _gb_global_shutdownPtr
      .asFunction<int Function()>();

  /// Frees a string previously returned by this API via an output
  /// parameter (gb_get_status, gb_get_file_tree, gb_get_head_info).
  void gb_free_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _gb_free_string(
      str,
    );
  }

  late final _gb_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'gb_free_string',
      );
  late final _gb_free_string = _gb_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Frees a gb_progress instance delivered to a gb_progress_cb. See the
  /// ownership note on gb_progress above.
  void gb_free_progress(
    ffi.Pointer<gb_progress> progress,
  ) {
    return _gb_free_progress(
      progress,
    );
  }

  late final _gb_free_progressPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<gb_progress>)>>(
        'gb_free_progress',
      );
  late final _gb_free_progress = _gb_free_progressPtr
      .asFunction<void Function(ffi.Pointer<gb_progress>)>();
}

/// Error codes returned by gb_* functions. Values <= 0 mirror the
/// subset of libgit2's git_error_code that the bridge surfaces
/// directly; values > 0 are bridge-specific.
enum gb_error_code {
  GB_OK(0),
  GB_ERROR_GENERIC(-1),
  GB_ERROR_NOTFOUND(-3),
  GB_ERROR_EXISTS(-4),
  GB_ERROR_AUTH(-16),
  GB_ERROR_NONFASTFORWARD(-11),
  GB_ERROR_CERTIFICATE(-17),
  GB_ERROR_UNCOMMITTED(-20),
  GB_ERROR_CONFLICT(-21),
  GB_ERROR_INVALIDSPEC(-22),
  GB_ERROR_NETWORK(100),
  GB_ERROR_CANCELLED(101),
  GB_ERROR_NO_UPSTREAM(102),
  GB_ERROR_UNBORN_HEAD(103);

  final int value;
  const gb_error_code(this.value);

  static gb_error_code fromValue(int value) => switch (value) {
    0 => GB_OK,
    -1 => GB_ERROR_GENERIC,
    -3 => GB_ERROR_NOTFOUND,
    -4 => GB_ERROR_EXISTS,
    -16 => GB_ERROR_AUTH,
    -11 => GB_ERROR_NONFASTFORWARD,
    -17 => GB_ERROR_CERTIFICATE,
    -20 => GB_ERROR_UNCOMMITTED,
    -21 => GB_ERROR_CONFLICT,
    -22 => GB_ERROR_INVALIDSPEC,
    100 => GB_ERROR_NETWORK,
    101 => GB_ERROR_CANCELLED,
    102 => GB_ERROR_NO_UPSTREAM,
    103 => GB_ERROR_UNBORN_HEAD,
    _ => throw ArgumentError('Unknown value for gb_error_code: $value'),
  };
}

/// Progress callback payload. `percent` is 0-100 (best-effort; some
/// libgit2 phases cannot report a precise percentage, in which case
/// -1 is sent with a descriptive `message`).
///
/// Ownership: each instance passed to a gb_progress_cb is individually
/// heap-allocated by the bridge and OWNED BY THE CALLBACK — it must be
/// released with gb_free_progress() once the callback is done reading
/// it. This matters because callback delivery across the Dart FFI
/// boundary (NativeCallable.listener) is asynchronous: the native
/// thread does not block waiting for Dart to consume the struct, so it
/// must not be stack-allocated or reused between calls.
final class gb_progress extends ffi.Struct {
  @ffi.Int32()
  external int percent;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> message;

  @ffi.Uint64()
  external int bytes_received;

  @ffi.Uint64()
  external int total_objects;

  @ffi.Uint64()
  external int received_objects;
}

typedef gb_progress_cbFunction =
    ffi.Void Function(
      ffi.Pointer<gb_progress> progress,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef Dartgb_progress_cbFunction =
    void Function(
      ffi.Pointer<gb_progress> progress,
      ffi.Pointer<ffi.Void> user_data,
    );

/// Optional push-style progress callback. `user_data` is passed through
/// unchanged from the call site (e.g. a pointer to a Dart
/// SendPort-backed NativeCallable on platforms that support it).
/// The callback takes ownership of `progress` — see the ownership note
/// on gb_progress above — and must release it via gb_free_progress().
typedef gb_progress_cb =
    ffi.Pointer<ffi.NativeFunction<gb_progress_cbFunction>>;
